# pagetop-website

./: .gitignore  Cargo.toml  README.md  build.rs
config/: default.toml
doc/: build.sh
doc/v0.0/en/: book.toml
doc/v0.0/en/src/: SUMMARY.md
doc/v0.0/es/: book.toml
doc/v0.0/es/src/: SUMMARY.md  apps.md  configuration.md  getting-started.md  intro.md  packages.md
doc/v0.0/es/src/tutoriales/: crear-un-modulo-desde-cero.md
guides/: build.sh
guides/v0.0/en/src/: SUMMARY.md
guides/v0.0/es/src/: apps.md
src/: home.rs  main.rs
src/locale/en-US/: app.ftl
src/locale/es-ES/: app.ftl
static/app/css/: styles.css
tools/: build-doc.sh
