[package]
name = "pagetop-website"
version = "0.0.11"
edition = "2021"

description = "Introduce the PageTop environment to the community."
homepage = "https://pagetop.cillero.es"
repository = "https://github.com/manuelcillero/pagetop-website"
license = "MIT OR Apache-2.0"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]

[dependencies]
static-files = "0.2.3"
pagetop = { version = "0.0", path = "../pagetop" }
pagetop-mdbook = { version = "0.0", path = "../pagetop-mdbook" }
pagetop-bootsier = { version = "0.0", path = "../pagetop/packages/pagetop-bootsier" }

serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
pagetop-build = { version = "0.0", path = "../pagetop/helpers/pagetop-build" }
pagetop-mdbook = { version = "0.0", path = "../pagetop-mdbook" }
